change ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "files": [],
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
-    "noUnusedLocals": false
+    "noUnusedLocals": false,
+    "strict": false,
+    "noImplicitAny": false
   }
 }
